fixed intro alignment issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,6 +40,13 @@ logo img{
   max-height:100px;
   background-color:transparent;
 }
+
+@media screen and (max-width:400px) {
+  logo img{
+    max-height:80px;
+  }  
+}
+
 .navbar-custom{
   position: absolute;
   z-index: 2;
@@ -50,6 +57,7 @@ logo img{
 
 #intro-head{
   position: absolute;
+  width: 80%;
   transform: translate(-50%,-50%);
   text-align: center;
     /* position: absolute; */
@@ -63,7 +71,7 @@ logo img{
 
 @media screen and (max-width:400px) {
   #intro-head{
-    font-size: 4rem;
+    font-size: 3rem;
   }  
 }
    
